fixed - layout issues

--- a/src/components/content-section/style.styl
+++ b/src/components/content-section/style.styl
@@ -5,18 +5,14 @@
   overflow-x hidden
 
   &__wrapper
-    padding 2rem 0
     position relative
 
-    +breakpoint(md)
-      padding-bottom 0
-
   &__heading
-    padding 0 1rem
+    padding 2rem 1rem 0
     text-transform uppercase
 
     +breakpoint(md)
-      padding 0 4rem
+      padding 2rem 4rem 0
 
   &__image
     display none
@@ -26,7 +22,7 @@
 
     &.company
       float right
-      margin 12rem -2rem 0 2rem
+      margin 16rem -2rem 0 2rem
 
   &__expander
     display none
