--- a/src/components/content/style.styl
+++ b/src/components/content/style.styl
@@ -1,5 +1,5 @@
 .c-content
-  padding 8rem 0 1rem
+  padding 3rem 0 1rem
   background #fff
 
   +breakpoint(md)
