--- a/src/components/footer/style.styl
+++ b/src/components/footer/style.styl
@@ -1,4 +1,5 @@
 .c-footer
+  background $color-bg
   color darken(#fff, 50)
   padding 2rem
   text-align center
