--- a/src/components/services/style.styl
+++ b/src/components/services/style.styl
@@ -30,6 +30,12 @@
       padding-top 2rem
       padding-bottom 4rem
 
+  &__header
+    margin-top -9rem
+    position relative
+    top 7rem
+    z-index 1
+
   &__items
     margin-top 4rem
 
