--- a/src/css/util/base.styl
+++ b/src/css/util/base.styl
@@ -1,3 +1,3 @@
 body
-  background $color-bg
+  background #fff
   font-family $font-base
